Fixed some bugs in ownershipchecker
git-svn-id: https://arran.fi.muni.cz/svn/stanse/trunk@273 98efdb2a-0913-0410-9d53-f03ad6a1d54d